changed padding to stop white space under footer on smaller screens

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -11,7 +11,7 @@
 	color: black;
 	grid-area: names;
 	font-size: 1.7vh;
-	padding: 20px;
+	padding: 10px;
 }
 .links {
 	margin: 0;
